# PyCodeCompiler

./: .gitignore  README.md  internals.md
.github/workflows/: run_unit_tests.yml
includes/: CMakeLists.txt
includes/python/: pyinclude.c  pyinclude.h
pycompiler/: Compiler.py  GeneratorHelper.py  Lexer.py  ModuleDeclaration.py  Parser.py  TypeChecking.py  TypeResolver.py  __main__.py  annotations.py  options.py  standard_library_config.json
pycompiler/emitter/: CodeBuilder.py
pycompiler/parser/: AbstractSyntaxTreeNode.py  AssignmentExpressionNode.py  AttributeAccessExpressionNode.py  BreakStatementNode.py  CallExpression.py  ClassDefinitionStatementNode.py  ConstantValueExpressionNode.py  ContinueStatementNode.py  FunctionDefinitionNode.py  FunctionDefinitionStatementNode.py  ImportStatementNode.py  ListConstruction.py  ModuleNode.py  NameAccessNode.py  OperatorExpressionNode.py  Parser.py  PassStatementNode.py  RaiseStatementNode.py  ReturnStatementNode.py  ScopeReferences.py  SliceExpressionNode.py  SubscriptionAccessExpressionNode.py  TypeStatementNode.py  WhileStatementNode.py  YieldStatementNode.py  util.py
pycompiler/specification/: Spec.py
pycompiler/templates/: CMakeLists.txt  file.c  pyinclude.c  pyinclude.h  pystandardlib.c  pystandardlib.h  test.c
pycompiler/templates/standard_library/: config.h  dict.c  dict.h  exceptions.c  exceptions.h  generator.c  generator.h  importhelper.c  importhelper.h  init.c  init.h  int.c  int.h  lambdas.c  lambdas.h  list.c  list.h  operators.c  operators.h  parameters.c  parameters.h  string.c  string.h  tuple.c  tuple.h
pycompiler/templates/standard_library/helpers/: hashmap.c  hashmap.h
pycompiler/templates/standard_library/modules/: io.c  io.h  itertools.c  itertools.h  typing.c  typing.h  unittest.c  unittest.h
pycompiler/visitors/: AbstractSyntaxTreeVisitor.py  FunctionDefinitionExtractor.py  InsertImplicitReturnNoneInFunction.py  Local2ModuleRewriter.py  MergeGenericsIntoReference.py  NameResolver.py  OperatorPrioritiesRewriter.py  Scope.py  ScopeAssigner.py
sources/: CMakeLists.txt  pyinclude.c  pyinclude.h
sources/standard_library/: functions.c  functions.h  int.c  int.h
tests/cpython/: run_py_tests.py  test_compile_and_run.py
tests/emitter/: test_CCodeEmitter.py  test_CallExpression.py  test_CodeBuilder.py  test_FunctionDefinition.py
tests/integration/: TestIntegrations.py  test_Integration.py
tests/parser/: test_AssignmentParsing.py  test_AttributeAccessParsing.py  test_CallExpressionNode.py  test_ClassDeclaration.py  test_ClassDefinitionNode.py  test_CommentParser.py  test_ConstantExpressions.py  test_Expressions.py  test_FunctionCall.py  test_FunctionDefinition.py  test_FunctionDefinitionNode.py  test_IfStatement.py  test_ImportStatement.py  test_ListConstruction.py  test_Loops.py  test_NameAccessParsing.py  test_OperatorLike.py  test_Operators.py  test_ReturnStatement.py  test_ScopeGeneratorVisitor.py  test_SubscriptionAccessParsing.py  test_TypeStatement.py  test_WhileStatement.py  test_WhileStatementNode.py  test_assignment.py
tests/utils/: test_TypeChecker.py
tests/visitors/: test_MergeGenericsIntoReference.py  test_NameResolver.py  test_OperatorRewriter.py  test_ScopeAssignment.py
(+71 files in other folders)
